# lumen

./: .gitignore  Cargo.toml  SPEC.md
.cargo/: config.toml
benches/: pipeline.rs
docs/: ROADMAP.md  SPEC.md
src/: cli.rs  error.rs  lib.rs  main.rs  pipeline.rs
src/clusterer/: drain.rs  mod.rs  template.rs
src/compressor/: mod.rs
src/formatter/: mod.rs
src/ingest/: detect.rs  mod.rs
src/json/: classify.rs  mod.rs  schema.rs
src/parser/: mod.rs  types.rs
src/scorer/: cms.rs  mod.rs
src/state/: mod.rs
tests/: basic_integration.rs
