[package]
name        = "lumen"
version     = "0.1.0"
edition     = "2021"
description = "High-performance log and JSON condenser for LLMs"
license     = "MIT"
rust-version = "1.75"

[lib]
name    = "lumen"
path    = "src/lib.rs"

[[bin]]
name = "lumen"
path = "src/main.rs"

[[bench]]
name    = "pipeline"
harness = false

# ── Runtime dependencies ──────────────────────────────────────────────────────

[dependencies]
# CLI argument parsing (§11)
clap = { version = "4", features = ["derive"] }

# I/O & SIMD scanning (§4)
memchr  = "2"
memmap2 = "0.9"

# Transparent decompression (§4.1)
flate2  = "1"
zstd    = { version = "0.13", features = ["zdict_builder"] }  # §9.3 dict training
bzip2   = "0.4"

# JSON parsing (§5.3, §6.2)
simd-json = "0.13"   # zero-copy NDJSON log parsing (log mode)
sonic-rs  = "0.3"    # SIMD tape-mode parser for JSON document mode

# Parallelism & pipeline channels (§7.2)
rayon               = "1"
crossbeam-channel   = "0.5"

# Compact data structures (§5.2, §7.3)
smallvec = { version = "1", features = ["union"] }
arrayvec = "0.7"
smol_str = "0.2"

# Hashing (§7.2 shard key, §8.1 CMS)
ahash = "0.8"

# Probabilistic data structures for JSON schema inference (§6.4)
# The concrete APIs are used in the json::schema implementation.
# During boilerplate phase these crates are listed but wrapped by
# placeholder newtypes (CardinalitySketch / QuantileSketch) until
# the algorithm is implemented.
hyperloglogplus = "0.4"   # HyperLogLog++ cardinality estimation
tdigest         = "0.2"   # streaming quantile estimation (p50/p99)

# Serialisation (§14 meta.json, §10.1 JSON output mode)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Output & diagnostics
indicatif          = "0.17"  # progress bar (human mode)
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# State management (§14)
dirs      = "5"     # platform-specific state directories
crc32fast = "1"     # CRC32 header for cms.bin corruption detection

# SIGPIPE handling on Unix (§15)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# ── Dev / bench dependencies ──────────────────────────────────────────────────

[dev-dependencies]
proptest  = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# ── Build profiles ────────────────────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true

[profile.bench]
inherits = "release"
debug    = true
